Graphic Patient Skin Added

--- a/app/src/main/res/drawable/gr_analysis.xml
+++ b/app/src/main/res/drawable/gr_analysis.xml
@@ -176,7 +176,7 @@
             android:pathData="M165.738,62.171c71.962,-31.675 223.058,4.488 267.913,73.722c16.541,25.539 36.139,145.592 47.707,169.467c10.431,21.529 3.415,47.774 -9.125,68.148c-68.321,103.576 -212.518,74.046 -316.176,52.58C94.489,415.827 11.931,383.665 15.392,309.81c2.678,-31.827 25.971,-57.429 40.97,-85.628C78.919,176.214 84.793,97.8 165.738,62.171z"/>
         <path
             android:pathData="M317.027,234.49c0,0 15.983,42.417 -10.754,62.785c41.72,15.315 54.47,-11.5 54.47,-11.5l-4.753,-43.304L317.027,234.49z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <group>
             <clip-path
                 android:pathData="M369.535,266.369c0,0 -42.344,14.367 -57.877,21.248c-25.416,35.046 -24.765,58.319 -22.115,85.868c1.553,16.146 3.709,67.869 -4.255,102.57c108.653,-11.94 109.621,-9.566 109.621,-9.566S419.265,290.369 369.535,266.369z"/>
@@ -526,10 +526,10 @@
         </group>
         <path
             android:pathData="M345.704,482.054c23.682,-45.017 43.026,-141.188 12.084,-172.12c-22.903,-22.896 -30.063,39.571 -31.226,56.055c-1.387,34.905 -6.701,68.502 -14.882,102.484C310.742,471.5 339.9,493.088 345.704,482.054z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M395.657,230.62c-6.887,11.443 -32.262,30.778 -48.791,32.208c-17.049,1.475 -31.655,-16.122 -38.456,-26.227c-14.643,-21.757 -6.331,-29.864 12.815,-50.779c28.415,-31.04 41.994,-32.061 62.548,-19.691C404.327,178.502 409.648,207.375 395.657,230.62z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M319.469,251.236c4.167,4.425 9.661,9.1 15.739,10.381c0.513,0.108 0.83,-0.575 0.361,-0.857c-5.442,-3.278 -10.778,-5.67 -15.437,-10.188C319.697,250.151 319.055,250.796 319.469,251.236L319.469,251.236z"
             android:fillColor="#312A3C"/>
@@ -538,7 +538,7 @@
             android:fillColor="#312A3C"/>
         <path
             android:pathData="M308.268,193.453c-0.579,-1.817 0.33,-2.865 1.673,-3.475c4.426,-2.01 14.272,-7.558 14.809,-7.003c0.79,0.818 -0.168,1.406 -0.609,1.988c-3.227,4.263 -7.123,7.998 -9.932,12.592c-0.629,1.029 -1.434,1.39 -2.424,0.489C310.307,196.696 309.187,195.066 308.268,193.453z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M334.229,186.861c0.396,2.503 1.16,4.915 2.528,7.063c0.892,1.401 3.185,3.85 5.027,3.167c0.35,-0.13 0.611,-0.475 0.491,-0.865c-0.193,-0.628 -0.469,-1.016 -1.045,-1.38c-1.025,-0.647 -1.852,-1.42 -2.631,-2.343c-1.515,-1.795 -2.596,-3.693 -3.375,-5.916C335,185.95 334.126,186.211 334.229,186.861L334.229,186.861z"
             android:fillColor="#312A3C"/>
@@ -550,7 +550,7 @@
             android:fillColor="@color/colorGrPatientHair"/>
         <path
             android:pathData="M373.259,212.976c4.219,2.272 4.974,7.375 2.66,11.128c-5.763,9.348 -18.37,7.484 -27.509,6.264C350.784,226.437 366.789,209.491 373.259,212.976z"
-            android:fillColor="#FFC5A0"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M359.327,222.819c2.624,-1.915 5.498,-3.782 8.825,-4.056c2.422,-0.2 5.397,0.333 6.621,2.637c0.255,0.48 -0.28,0.924 -0.73,0.701c-2.417,-1.197 -4.289,-2.305 -7.113,-1.875c-2.656,0.404 -5.033,1.801 -7.27,3.208C359.271,223.68 358.974,223.077 359.327,222.819L359.327,222.819z"
             android:fillColor="#312A3C"/>
