--- a/app/src/main/res/drawable/gr_appointment.xml
+++ b/app/src/main/res/drawable/gr_appointment.xml
@@ -426,7 +426,7 @@
             android:fillColor="#2EA8BC"/>
         <path
             android:pathData="M298.89,376.256c4.428,4.496 21.149,24.275 23.982,29.763c3.064,5.936 5.257,12.523 9.868,17.427c0.898,0.954 3.02,0.042 3.175,-1.33c0.285,-2.522 0.164,-4.996 -0.36,-7.334c-0.3,-1.338 1.756,-2.568 2.979,-1.803c0.913,0.572 1.67,1.415 2.265,2.22c3.725,5.038 7.464,8.518 11.189,13.556c1.573,2.128 3.961,5.371 6.104,7.05c1.007,0.79 1.669,-0.312 1.409,-1.53c-0.225,-1.052 -1.992,-4.82 -1.632,-4.419c0.807,0.894 2.853,0.093 2.374,-1.785c-2.026,-7.95 -7.248,-17.523 -10.886,-22.232c-9.148,-11.843 -29.521,-25.449 -38.635,-38.104"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M208.468,280.014c21.698,36.192 52.322,70.614 88.788,99.797c3.941,3.154 6.842,5.77 10.8,4.631c5.543,-1.595 14.181,-6.689 10.199,-11.983c-18.799,-24.995 -43.536,-53.213 -53.45,-79.626c-4.47,-11.909 -7.992,-23.877 -13.996,-35.69c-6.004,-11.813 -14.833,-25.063 -27.352,-32.343"
             android:fillColor="#2EA8BC"/>
@@ -441,7 +441,7 @@
             android:fillColor="#2EA8BC"/>
         <path
             android:pathData="M211.99,294.134c4.498,-4.409 21.594,-23.836 24.578,-29.246c3.227,-5.852 5.632,-12.357 10.324,-17.17c0.913,-0.936 2.944,-0.009 3.039,1.353c0.174,2.503 -0.044,4.954 -0.65,7.266c-0.347,1.323 4.585,2.72 5.808,1.975c0.912,-0.557 16.18,-16.286 16.547,-16.679c0.823,-0.878 2.784,-0.062 2.241,1.795c-2.298,7.859 -7.776,17.293 -11.512,21.922c-9.395,11.642 -29.799,24.911 -39.194,37.357"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M159.88,375.197c7.255,-1.349 22.718,-11.263 29.359,-19.103c10.474,-12.366 43.798,-52.473 44.611,-59.122c0.345,-2.823 -9.029,-10.881 -12.704,-14.529c-2.191,-2.176 -19.945,18.477 -29.39,26.622c-2.928,2.525 -20.073,15.86 -28.239,21.493"
             android:fillColor="#2EA8BC"/>
@@ -453,19 +453,19 @@
             android:fillColor="#FFFFFF"/>
         <path
             android:pathData="M175.033,214.376c2.093,-8.571 5.142,-21.192 6.579,-26.979c0.591,-2.38 1.182,-4.76 1.854,-7.118c0.152,-0.533 0.333,-1.108 0.708,-1.445c0.313,-0.282 0.699,-0.338 1.058,-0.35c3.552,-0.123 6.32,2.806 9.446,4.426c3.822,1.98 8.303,2.014 12.195,3.818c0.468,0.217 0.97,0.519 1.1,1.134c0.075,0.357 0.009,0.758 -0.057,1.142c-1.2,6.959 -2.291,26.022 -2.999,34.871c-0.396,4.944 -9.357,7.778 -18.424,5.294C175.581,226.178 174.2,217.786 175.033,214.376z"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M184.174,178.834c0.313,-0.282 0.699,-0.338 1.058,-0.35c3.552,-0.123 6.32,2.806 9.446,4.426c3.822,1.98 8.303,2.014 12.195,3.818c0.468,0.217 0.97,0.519 1.1,1.134c0.075,0.357 0.009,0.758 -0.057,1.142c-0.67,3.89 -1.341,7.779 -2.011,11.669c-4.167,1.808 -8.47,2.602 -12.54,1.849c-5.587,-1.033 -10.566,-5.37 -12.595,-11.736c0.28,-1.129 0.561,-2.259 0.841,-3.389c0.591,-2.38 1.182,-4.76 1.854,-7.118C183.618,179.745 183.8,179.17 184.174,178.834z"
-            android:fillColor="#E89C82"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M175.325,172.879c-5.179,-0.643 -9.954,-3.45 -10.866,-7.272c-0.912,-3.822 3.035,-8.255 8.316,-8.524"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M174.841,173.243c5.803,19.026 19.598,21.21 34.083,25.481c2.559,0.754 6.815,1.014 9.508,0.67c6.613,-0.843 9.484,-7.122 10.682,-12.42c2.085,-9.223 3.027,-18.611 2.808,-27.982c-0.151,-6.449 -0.899,-13.043 -4.253,-18.899c-3.354,-5.857 -9.742,-10.91 -17.64,-12.023c-9.836,-1.386 -19.519,3.525 -25.956,9.67c-9.498,9.068 -14.179,21.822 -9.94,33.171"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M231.898,158.686c0.12,5.94 0.343,4.952 0.997,8.333c0.071,0.366 0.877,3.251 2.946,4.574c1.631,1.043 2.075,3.463 0.686,4.824c-0.773,0.757 -1.541,1.1 -2.638,1.311c-1.55,0.298 -3.081,-0.084 -3.992,-1.332"
-            android:fillColor="#F7B094"/>
+            android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M160.437,159.008c14.564,-1.621 27.927,-6.983 40.007,-13.378c5.641,-2.986 11.168,-6.292 14.994,-10.698c2.084,-2.4 3.6,-5.654 1.624,-8.19c-2.151,-2.76 -7.07,-3.046 -11.128,-2.74c-2.94,0.222 -5.857,0.581 -8.733,1.076c-4.854,0.835 -9.647,2.078 -13.767,4.207c-4.733,2.447 -8.373,5.949 -11.891,9.426c-3.606,3.565 -7.31,7.45 -7.692,12.034"
             android:fillColor="@color/colorGrPatientHair"/>
