--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -24,10 +24,10 @@
         android:fillColor="@color/colorGrBackground"/>
     <path
         android:pathData="M155.982,213.084c1.16,11.68 -52.905,0.542 -52.605,-9.252c0.285,-9.227 4.734,-25.517 4.734,-32.01c0,-19.61 18.556,-2.812 31.47,-4.55C138.924,178.629 149.477,184.264 155.982,213.084z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M85.779,209.332c0,0 -7.943,82.649 -7.88,83.979c0.15,3.173 0.614,9.204 2.034,13.653c0.442,1.385 2.257,1.691 3.101,0.508l1.504,-2.107l0.225,-17.079l6.415,-76.709L85.779,209.332z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M100.574,179.023c0,0 -10.623,3.282 -14.814,15.396c-4.573,13.215 -3.797,15.205 -3.797,15.205l16.545,4.383L100.574,179.023z"
         android:fillColor="#46CDC0"/>
@@ -41,13 +41,13 @@
         android:fillColor="@color/colorGrPatientShoe"/>
     <path
         android:pathData="M117.921,306.063c0,0 11.395,23.339 -12.939,87.137c0,0 5.919,50.444 1.24,68.977l-19.517,-0.522c0,0 -12.887,-56.17 -13.53,-64.781c-0.645,-8.611 1.813,-65.955 12.353,-102.737L117.921,306.063z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientBottom"/>
     <path
         android:pathData="M129.587,461.393c0,0 -2.022,4.508 -6.457,7.245c-2.159,1.331 -6.297,1.924 -9.596,2.696c-1.973,0.465 -2.442,4.213 0.612,4.574c6.993,0.821 23.343,0.195 28.013,-2.734c3.837,-2.541 -0.408,-11.278 -0.408,-11.278L129.587,461.393z"
         android:fillColor="@color/colorGrPatientShoe"/>
     <path
         android:pathData="M163.979,303.378c0,0 3.731,17.815 -15.876,76.846c0,0 1.496,65.656 -3.179,84.189l-19.52,-0.52c0,0 -9.798,-46.052 -10.443,-54.663c-0.486,-6.531 -5.783,-77.886 0.645,-108.743c2.047,-9.829 11.452,2.513 15.32,-4.452L163.979,303.378z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientBottom"/>
     <path
         android:pathData="M164.61,307.669c0,0 -65.839,5.777 -81.7,-2.304l3.1,-18.273l76.909,1.505L164.61,307.669z"
         android:strokeAlpha="0.07"
@@ -79,10 +79,10 @@
         android:fillColor="#D2D7EF"/>
     <path
         android:pathData="M118.924,270.656c0,0 -5.622,2.606 -7.36,4.458c-1.743,1.85 -4.926,6.522 -1.595,9.269c3.333,2.748 9.418,4.349 13.467,2.9c4.047,-1.452 4.623,-6.126 4.623,-6.126L118.924,270.656z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M150.959,211.84c1.668,5.9 12.442,26.773 9.228,30.009c-6.521,6.569 -41.264,28.807 -41.264,28.807l9.136,10.501c0,0 20.91,-6.791 37.668,-19.669c17.068,-13.116 15.016,-18.518 12.611,-32.106c-2.415,-13.594 -8.175,-23.623 -8.477,-24.145C162.742,206.686 150.959,211.84 150.959,211.84z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M107.99,171.296c0,0 18.379,2.075 24.026,-0.531c0,0 -6.187,5.179 -24.02,3.177L107.99,171.296z"
         android:strokeAlpha="0.07"
@@ -90,7 +90,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M134.219,87.798c0,0 7.94,1.894 16.266,6.758c8.535,4.987 17.475,13.1 18.672,25.497c0.689,7.139 0.075,14.036 -1.819,20.357c-4.606,15.363 -16.765,27.301 -36.089,30.925c-13.638,2.556 -28.403,0.673 -39.377,-7.4c-10.978,-8.071 -17.544,-25.19 -14.809,-39.446c2.735,-14.256 9.291,-21.819 19.42,-28.409C106.61,89.491 119.686,86.733 134.219,87.798z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M117.144,144.618c-2.195,2.732 -6.916,3.589 -7.966,-0.692c-0.349,-1.43 -2.6,-0.992 -2.249,0.446c0.593,2.42 2.415,4.417 4.937,4.853c2.885,0.5 5.435,-1.148 7.169,-3.308C119.962,144.763 118.064,143.476 117.144,144.618L117.144,144.618z"
         android:strokeAlpha="0.2"
@@ -122,7 +122,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M157.745,149.676c0.525,0.142 1.709,0.322 2.28,0.322c3.426,0 6.204,-2.778 6.204,-6.206c0,-3.426 -2.779,-6.205 -6.204,-6.205c-0.858,0 -2.009,-0.315 -2.751,0c0,0 0.935,3.717 0.703,7.903C157.745,149.676 157.745,149.676 157.745,149.676z"
-        android:fillColor="#FFB474"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M163.091,145.098c-0.448,0 -0.843,-0.322 -0.918,-0.78c-0.42,-2.576 -2.818,-2.932 -2.921,-2.946c-0.506,-0.069 -0.866,-0.535 -0.802,-1.042c0.068,-0.504 0.527,-0.863 1.033,-0.802c1.34,0.16 4.008,1.309 4.527,4.491c0.081,0.506 -0.264,0.984 -0.771,1.068C163.189,145.096 163.139,145.098 163.091,145.098z"
         android:strokeAlpha="0.2"
@@ -169,19 +169,19 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M349.46,188.158c-5.818,7.023 -22.81,61.054 -22.81,61.054l14.938,1.194c0,0 30.485,-68.488 24.866,-70.212C360.832,178.47 355.278,181.135 349.46,188.158z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M349.745,457.504c0,0 -2.052,4.58 -6.559,7.36c-2.194,1.353 -6.399,1.957 -9.75,2.74c-2.004,0.47 -2.482,4.279 0.622,4.644c7.111,0.835 23.719,0.2 28.463,-2.775c3.9,-2.579 -0.414,-11.462 -0.414,-11.462L349.745,457.504z"
         android:fillColor="@color/colorGrPatientShoe"/>
     <path
         android:pathData="M376.576,305.024c0,0 12.173,33.922 -12.16,97.719c0,0 5.14,39.862 0.462,58.395l-19.517,-0.522c0,0 -9.801,-46.05 -10.444,-54.661c-0.645,-8.611 -2.548,-77.401 13.47,-106.237L376.576,305.024z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientBottom"/>
     <path
         android:pathData="M388.241,460.354c0,0 -2.022,4.508 -6.457,7.245c-2.159,1.331 -6.297,1.924 -9.596,2.696c-1.973,0.465 -2.442,4.213 0.612,4.574c6.993,0.821 23.343,0.195 28.013,-2.734c3.837,-2.541 -0.408,-11.278 -0.408,-11.278L388.241,460.354z"
         android:fillColor="@color/colorGrPatientShoe"/>
     <path
         android:pathData="M422.633,302.339c0,0 12.694,12.891 -11.636,76.694c0,0 -2.744,65.808 -7.419,84.341l-19.52,-0.52c0,0 -9.798,-46.052 -10.443,-54.663c-0.486,-6.531 -5.783,-77.886 0.645,-108.743c2.047,-9.829 11.452,2.513 15.32,-4.452L422.633,302.339z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientBottom"/>
     <path
         android:pathData="M423.264,306.63c0,0 -61.74,6.839 -77.601,-1.242l6.303,-19.335l69.607,1.505L423.264,306.63z"
         android:strokeAlpha="0.07"
@@ -194,7 +194,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M417.039,215.738c1.161,11.682 -52.923,0.542 -52.62,-9.254c0.283,-9.23 2.952,-25.771 4.734,-32.019c5.038,-17.669 18.56,-2.812 31.476,-4.551C404.065,180.649 410.53,186.91 417.039,215.738z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M425.079,195.061c-4.459,-8.362 -9.227,-11.117 -18.723,-16.882c-2.117,-1.285 -3.234,-1.945 -3.234,-1.945s-18.9,10.362 -34.557,0.352c0,0 0.699,-1.649 -11.755,4.83c-2.879,1.497 -10.266,6.442 -13.01,19.736c-0.154,0.745 5.172,1.493 5.022,2.242c-1.952,9.722 -3.242,19.662 -3.49,22.933c-0.525,6.939 -4.63,52.191 -4.108,75.723c11.989,6.801 84.718,1.103 84.718,1.103S434.233,223.869 425.079,195.061z"
         android:fillColor="#46CDC0"/>
@@ -218,7 +218,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M346.513,251.92l-1.363,6.262c0,0 8.861,4.876 -4.212,4.981c-12.943,0.106 -15.6,-6.602 -14.287,-13.95c0.841,-4.707 7.506,-2.601 7.506,-2.601L346.513,251.92z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M347.963,271.593c0,1.408 1.138,2.547 2.543,2.549l55.767,0.103c1.406,0.003 2.548,-1.138 2.552,-2.544L396.849,199.6c0.006,-1.412 -1.132,-2.553 -2.539,-2.552l-55.764,-0.101c-1.408,-0.002 -2.551,1.136 -2.554,2.544L347.963,271.593z"
         android:fillColor="#AD795B"/>
@@ -227,7 +227,7 @@
         android:fillColor="#D2D7EF"/>
     <path
         android:pathData="M404.72,216.33l-3.095,32.216c-0.528,0.013 -37.8,-8.813 -43.659,-12.195c-5.858,-3.382 -13.322,-0.201 -15.435,1.912c-2.114,2.114 -0.319,8.227 1.925,10.471c2.244,2.244 12.563,0.584 15.188,0.584c2.624,0 35.066,15.357 47.187,15.357c12.121,0 12.216,-2.912 15.258,-15.945c1.914,-8.197 3.675,-27.926 3.675,-27.926L404.72,216.33z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M341.588,249.784c0,0 -4.705,0.802 -5.085,5.904c-0.349,4.683 2.46,7.444 4.899,7.413c2.439,-0.031 2.942,-0.198 3.787,-1.661s0.697,-9.884 0.697,-9.884L341.588,249.784z"
         android:strokeAlpha="0.07"
@@ -235,7 +235,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M344.593,250.423c0,0 6.123,1.575 7.698,3.149c1.575,1.575 3.755,4.864 1.575,6.123c-2.181,1.259 -5.773,4.024 -9.272,4.024s-7.337,-4.374 -7.337,-6.648C337.256,254.797 339.734,248.848 344.593,250.423z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M403.193,208.107l-1.243,7.963l2.724,0.546l-0.217,2.452l-3.694,-1.464z"
         android:strokeAlpha="0.07"
@@ -251,7 +251,7 @@
         android:fillColor="#46CDC0"/>
     <path
         android:pathData="M393.785,87.579c0,0 7.884,1.651 16.228,6.223c8.555,4.687 17.593,12.444 19.112,24.639c0.875,7.022 0.455,13.844 -1.241,20.129c-4.123,15.277 -15.79,27.385 -34.751,31.486c-13.381,2.894 -27.995,1.438 -39.041,-6.225c-11.046,-7.663 -17.988,-24.368 -15.68,-38.504c2.308,-14.136 8.569,-21.773 18.378,-28.549C366.6,90.003 379.423,86.924 393.785,87.579z"
-        android:fillColor="#FFBE9D"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M371.732,170.748c0,0 15.038,0.855 20.415,-1.628c0,0 -8.326,3.638 -19.899,3.638L371.732,170.748z"
         android:strokeAlpha="0.07"
@@ -271,10 +271,10 @@
         android:fillColor="#FF9E7C"/>
     <path
         android:pathData="M420.263,141.865c0,5.556 -4.503,10.057 -10.055,10.057c-5.556,0 -10.057,-4.5 -10.057,-10.057c0,-5.551 4.501,-10.053 10.057,-10.053C415.759,131.812 420.263,136.315 420.263,141.865z"
-        android:fillColor="#FFA986"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M337.881,131.812c1.505,-1.013 5.956,-3.132 7.909,-3.132c5.207,0 9.429,4.223 9.429,9.432c0,5.205 -4.221,9.428 -9.429,9.428c-1.522,0 -2.96,-0.36 -4.233,-1.001"
-        android:fillColor="#FFA986"/>
+        android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M421.793,134.244c-6.81,2.855 -26.654,6.696 -36.176,6.696c-27.355,0 -46.142,-9.074 -46.142,-9.074"
         android:strokeLineJoin="round"
