Graphic Colors Change

--- a/app/src/main/res/drawable/gr_consultation.xml
+++ b/app/src/main/res/drawable/gr_consultation.xml
@@ -62,17 +62,17 @@
         android:strokeWidth="1"
         android:pathData="M390.585,310.669c0.804,-0.221 1.607,-0.445 2.41,-0.673"
         android:fillColor="#00000000"
-        android:strokeColor="#6AD4D6"/>
+        android:strokeColor="@color/colorPrimaryLight"/>
     <path
         android:strokeWidth="1"
         android:pathData="M397.783,308.586c12.925,-3.951 25.543,-9.072 36.507,-16.905c12.993,-9.281 23.554,-22.802 26.518,-38.492c4.873,-25.802 -11.069,-51.618 -8.699,-77.769c1.282,-14.145 7.867,-27.396 9.185,-41.537c1.743,-18.71 -6.271,-37.689 -19.646,-50.889C422.56,64.155 399.032,59.57 373.865,69.46c-17.532,6.89 -32.575,18.724 -48.106,29.385c-15.53,10.661 -32.458,20.512 -51.191,22.491c-19.382,2.048 -38.482,-4.513 -57.621,-8.198c-19.138,-3.685 -40.917,-3.857 -55.839,8.68c-18.495,15.539 -18.541,45.737 -5.567,66.114c6.064,9.524 14.845,20.607 9.715,30.664c-3.149,6.174 -10.385,8.831 -16.908,11.173c-17.938,6.438 -35.469,14.589 -50.449,26.372c-14.979,11.784 -27.339,27.452 -32.901,45.681c-3.205,10.505 -4.797,27.026 0.077,37.282c5.48,11.531 21.415,20.491 32.941,24.255c8.383,2.737 17.269,3.76 26.087,3.603c5.646,-0.1 11.839,-0.941 15.644,-5.113c3.805,-4.172 2.808,-12.545 -2.718,-13.706c-2.767,-0.581 -5.612,0.809 -7.698,2.718c-8.765,8.021 -5.735,23.693 3.441,31.24c9.176,7.547 22.024,8.709 33.872,7.826c9.847,-0.734 19.606,-2.651 28.999,-5.698c11.147,-3.616 21.822,-8.825 33.312,-11.128c10.241,-2.053 20.953,-1.696 31.043,0.997"
         android:fillColor="#00000000"
-        android:strokeColor="#6AD4D6"/>
+        android:strokeColor="@color/colorPrimaryLight"/>
     <path
         android:strokeWidth="1"
         android:pathData="M262.395,374.785c0.797,0.245 1.589,0.504 2.376,0.778"
         android:fillColor="#00000000"
-        android:strokeColor="#6AD4D6"/>
+        android:strokeColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M223.605,437.731a32.908,125.848 91.278,1 0,251.634 5.613a32.908,125.848 91.278,1 0,-251.634 -5.613z"
         android:strokeAlpha="0.1"
@@ -80,13 +80,13 @@
         android:fillAlpha="0.1"/>
     <path
         android:pathData="M399.75,453.959L260.723,421.36c-8.383,-1.635 -15.179,-9.757 -15.179,-18.14l-7.607,-298.523c0,-8.383 14.403,-15.838 22.786,-14.202l144.504,28.19c8.383,1.635 15.179,9.757 15.179,18.14v300.507C420.406,445.715 408.133,455.594 399.75,453.959z"
-        android:fillColor="#6AD4D6"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M394.322,456.307l-144.504,-28.19c-8.383,-1.635 -15.179,-9.757 -15.179,-18.14V109.47c0,-8.383 6.796,-13.853 15.179,-12.217l144.504,28.19c8.383,1.635 15.179,9.757 15.179,18.14V444.09C409.501,452.473 402.705,457.943 394.322,456.307z"
         android:fillColor="#FFFFFF"/>
     <path
         android:pathData="M344.066,130.216l-43.991,-8.582c-1.265,-0.247 -2.291,-1.473 -2.291,-2.738l0,0c0,-1.265 1.026,-2.091 2.291,-1.844l43.991,8.582c1.265,0.247 2.291,1.473 2.291,2.738l0,0C346.357,129.637 345.331,130.463 344.066,130.216z"
-        android:fillColor="#6AD4D6"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M398.941,419.603l-153.741,-30.844l0,-266.025l153.741,26.988z"
         android:fillColor="#9DDAEB"/>
@@ -147,13 +147,13 @@
             android:strokeColor="#2E3749"/>
         <path
             android:pathData="M219.374,256.927l55.539,4.51l13.314,73.901l-2.075,1.728l-68.854,-78.411z"
-            android:fillColor="#00A79B"/>
+            android:fillColor="@color/colorPrimary"/>
         <path
             android:pathData="M300.813,212.816h24.252v25.377h-24.252z"
             android:fillColor="@color/colorGrDoctorSkin"/>
         <path
             android:pathData="M217.298,258.655l55.539,4.51l13.315,73.901l-49.17,-4.055z"
-            android:fillColor="#00B1A4"/>
+            android:fillColor="@color/colorPrimary"/>
         <path
             android:pathData="M232.921,291.418c0.123,0.023 0.246,0.047 0.369,0.073c0.865,0.179 1.738,0.426 2.454,0.943c1.431,1.031 1.696,2.86 -0.177,3.473c-1.396,0.456 -2.856,0.714 -4.323,0.764c1.647,0.356 3.295,0.711 4.942,1.067c1.258,0.272 2.776,0.807 2.952,2.082c0.177,1.284 -1.224,2.248 -2.506,2.442c-1.281,0.194 -2.644,-0.029 -3.842,0.465c1.594,0.2 3.164,0.592 4.666,1.164c1.073,0.409 2.313,1.446 1.765,2.455c-0.246,0.452 -0.773,0.663 -1.266,0.812c-1.316,0.398 -2.689,0.605 -4.063,0.614c1.607,0.596 3.106,1.48 4.406,2.597c0.38,0.327 0.771,0.733 0.772,1.234c0.001,0.596 -0.544,1.038 -1.071,1.317c-2.295,1.215 -5.067,1.071 -7.617,0.578c-1.401,-0.271 -2.87,-0.689 -3.818,-1.756c-0.948,-1.067 -1.069,-2.969 0.101,-3.787c-1.723,-0.567 -2.739,-2.7 -2.094,-4.396c-1.007,-0.642 -1.959,-1.48 -2.372,-2.6c-0.298,-0.808 -0.214,-1.635 0.173,-2.385c0.143,-0.277 1.181,-1.808 1.596,-1.618c-1.267,-0.581 -2.776,-1.688 -2.701,-3.23c0.046,-0.939 0.555,-1.999 1.445,-2.381c0.625,-0.269 1.325,-0.291 2.005,-0.308C227.459,290.966 230.227,290.915 232.921,291.418z"
             android:fillColor="@color/colorGrDoctorSkin"/>
@@ -278,7 +278,7 @@
         android:fillAlpha="0.1"/>
     <path
         android:pathData="M110.039,187.423h89.395c6.24,0 11.298,-5.058 11.298,-11.298v-31.154c0,-6.24 -5.058,-11.298 -11.298,-11.298h-89.395c-6.24,0 -11.298,5.058 -11.298,11.298v31.154C98.741,182.365 103.799,187.423 110.039,187.423z"
-        android:fillColor="#00BDD8"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M114.978,151.143h80.291c1.794,0 3.247,-1.454 3.247,-3.247v0c0,-1.793 -1.454,-3.247 -3.247,-3.247h-80.291c-1.793,0 -3.247,1.454 -3.247,3.247v0C111.73,149.689 113.184,151.143 114.978,151.143z"
         android:fillColor="#FFFCF8"/>
@@ -290,10 +290,10 @@
         android:fillColor="#FFFCF8"/>
     <path
         android:pathData="M198.517,185.184l0,15.901l-22.172,-14.558z"
-        android:fillColor="#00BDD8"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M128.214,265.125H38.818c-6.239,0 -11.298,-5.058 -11.298,-11.298v-31.154c0,-6.239 5.058,-11.298 11.298,-11.298h89.396c6.239,0 11.298,5.058 11.298,11.298v31.154C139.512,260.067 134.454,265.125 128.214,265.125z"
-        android:fillColor="#6AD4D6"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M123.275,228.844H42.984c-1.794,0 -3.247,-1.454 -3.247,-3.247l0,0c0,-1.794 1.454,-3.247 3.247,-3.247h80.291c1.793,0 3.247,1.454 3.247,3.247l0,0C126.522,227.39 125.068,228.844 123.275,228.844z"
         android:fillColor="#FFFCF8"/>
@@ -305,10 +305,10 @@
         android:fillColor="#FFFCF8"/>
     <path
         android:pathData="M39.736,262.885l0,15.901l22.172,-14.557z"
-        android:fillColor="#6AD4D6"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M110.039,329.367h89.395c6.24,0 11.298,-5.058 11.298,-11.298V301.47c0,-6.239 -5.058,-11.298 -11.298,-11.298h-89.395c-6.24,0 -11.298,5.058 -11.298,11.298v16.599C98.741,324.308 103.799,329.367 110.039,329.367z"
-        android:fillColor="#00BDD8"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M114.978,305.739h80.291c1.794,0 3.247,-1.454 3.247,-3.247l0,0c0,-1.793 -1.454,-3.247 -3.247,-3.247h-80.291c-1.793,0 -3.247,1.454 -3.247,3.247l0,0C111.73,304.285 113.184,305.739 114.978,305.739z"
         android:fillColor="#FFFCF8"/>
@@ -317,7 +317,7 @@
         android:fillColor="#FFFCF8"/>
     <path
         android:pathData="M198.517,327.127l0,15.901l-22.172,-14.557z"
-        android:fillColor="#00BDD8"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M295.236,78.759c3.65,-0.198 18.56,2.123 18.04,-4.598c-0.163,-2.094 -1.844,-3.771 -3.668,-4.813c-2.218,-1.267 -4.747,-1.885 -7.27,-2.279c-3.938,-0.615 -14.289,-2.111 -17.639,0.7c-3.27,2.743 -3.245,7.522 0.827,9.794C288.416,79.175 291.934,78.938 295.236,78.759z"
         android:fillColor="@color/colorGrBackground"/>
