--- a/app/src/main/res/drawable/gr_doctors.xml
+++ b/app/src/main/res/drawable/gr_doctors.xml
@@ -30,7 +30,7 @@
         android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M100.574,179.023c0,0 -10.623,3.282 -14.814,15.396c-4.573,13.215 -3.797,15.205 -3.797,15.205l16.545,4.383L100.574,179.023z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M91.177,195.875c0,0 0.06,4.522 -1.608,15.842l-1.7,-0.526L91.177,195.875z"
         android:strokeAlpha="0.07"
@@ -60,7 +60,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M167.54,194.984c-10.267,-16.268 -26.717,-19.816 -26.717,-19.816s-21.539,9.671 -33.041,0.617c0,0 -2.508,0.725 -10.358,4.669c-2.9,1.457 -9.535,8.442 -12.279,21.737c-0.154,0.745 5.172,1.493 5.022,2.242c-1.952,9.722 -3.242,19.662 -3.49,22.933c-0.525,6.939 -4.63,52.191 -4.108,75.723c11.989,6.801 84.718,1.103 84.718,1.103s8.04,-65.015 1.721,-97.833c-0.101,-0.526 2.918,-1.927 2.694,-2.602C170.859,201.207 169.035,197.441 167.54,194.984z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M145.32,223.531c0,0 5.482,8.242 6.472,8.835c0.991,0.596 2.33,0.047 5.74,-2.281l1.741,3.006c0,0 -2.798,2.607 -6.877,2.623C149.376,235.726 145.32,223.531 145.32,223.531"
         android:strokeAlpha="0.07"
@@ -130,34 +130,34 @@
         android:fillAlpha="0.2"/>
     <path
         android:pathData="M76.242,107.251c11.48,-7.687 26.296,-8.276 38.377,-1.571c2.588,1.436 5.377,3.011 8.318,4.708c15.254,8.807 31.328,25.796 34.337,27.199c1.745,0.814 8.541,-1.529 8.541,5.461c0,5.403 -2.964,6.267 -8.07,6.628c-0.914,5.51 -8.937,15.057 -8.937,15.057s3.596,5.941 17.877,3.492c18.494,-3.171 19.718,-13.563 18.494,-27.286c-1.224,-13.723 0.122,-31.677 -4.988,-41.124c-3.504,-6.478 -16.296,-25.099 -41.266,-28.047c-19.728,-2.329 -35.623,0.703 -42.34,5.41c-12.858,9.01 -18.902,22.651 -20.375,30.094C76.208,107.274 76.22,107.266 76.242,107.251z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M115.904,104.395c0,0 6.181,-10.353 14.895,-12.452"
         android:strokeLineJoin="round"
         android:strokeWidth="1.9193"
         android:fillColor="#00000000"
-        android:strokeColor="#00C2AE"
+        android:strokeColor="@color/colorGrPatientTop"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M167.503,104.539c0,0 8.72,-2.472 12.831,1.639"
         android:strokeLineJoin="round"
         android:strokeWidth="1.9193"
         android:fillColor="#00000000"
-        android:strokeColor="#00C2AE"
+        android:strokeColor="@color/colorGrPatientTop"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M151.233,111.887c0,0 0.327,14.584 -1.122,18.101"
         android:strokeLineJoin="round"
         android:strokeWidth="1.9193"
         android:fillColor="#00000000"
-        android:strokeColor="#00C2AE"
+        android:strokeColor="@color/colorGrPatientTop"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M86.106,89.016c0,0 7.025,-3.371 17.269,-4.071"
         android:strokeLineJoin="round"
         android:strokeWidth="1.9193"
         android:fillColor="#00000000"
-        android:strokeColor="#00C2AE"
+        android:strokeColor="@color/colorGrPatientTop"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M334.936,128.466c0,0 6.244,37.088 -6.898,58.869c-11.668,19.338 0.642,37.477 22.465,44.835c14.004,4.721 15.457,-28.243 22.362,-35.148c6.905,-6.905 5.972,-18.658 -1.514,-46.694c-7.486,-28.036 -18.727,-38.763 -18.727,-38.763L334.936,128.466z"
@@ -197,10 +197,10 @@
         android:fillColor="@color/colorGrPatientSkin"/>
     <path
         android:pathData="M425.079,195.061c-4.459,-8.362 -9.227,-11.117 -18.723,-16.882c-2.117,-1.285 -3.234,-1.945 -3.234,-1.945s-18.9,10.362 -34.557,0.352c0,0 0.699,-1.649 -11.755,4.83c-2.879,1.497 -10.266,6.442 -13.01,19.736c-0.154,0.745 5.172,1.493 5.022,2.242c-1.952,9.722 -3.242,19.662 -3.49,22.933c-0.525,6.939 -4.63,52.191 -4.108,75.723c11.989,6.801 84.718,1.103 84.718,1.103S434.233,223.869 425.079,195.061z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M403.122,176.234c0,0 14.966,3.307 22.641,15.175c8.47,13.096 0,29.396 0,29.396s-3.619,5.373 -11.269,9.187c-2.516,1.253 -8.08,2.783 -8.08,2.783s-7.027,-18.022 -6.967,-30.344C399.506,190.108 403.122,176.234 403.122,176.234z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M403.974,222.492c0,0 5.482,8.242 6.472,8.835c0.991,0.596 2.329,0.047 5.74,-2.281l1.741,3.006c0,0 -2.798,2.607 -6.877,2.623C408.031,234.687 403.974,222.492 403.974,222.492"
         android:strokeAlpha="0.07"
@@ -248,7 +248,7 @@
         android:fillAlpha="0.07"/>
     <path
         android:pathData="M405.12,197.892l-4.357,17.949l25,4.963l3.724,-14.384z"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M393.785,87.579c0,0 7.884,1.651 16.228,6.223c8.555,4.687 17.593,12.444 19.112,24.639c0.875,7.022 0.455,13.844 -1.241,20.129c-4.123,15.277 -15.79,27.385 -34.751,31.486c-13.381,2.894 -27.995,1.438 -39.041,-6.225c-11.046,-7.663 -17.988,-24.368 -15.68,-38.504c2.308,-14.136 8.569,-21.773 18.378,-28.549C366.6,90.003 379.423,86.924 393.785,87.579z"
         android:fillColor="@color/colorGrPatientSkin"/>
@@ -306,16 +306,16 @@
         android:fillColor="@color/colorGrPatientHair"/>
     <path
         android:pathData="M448.516,108.727c-4.118,0 -8.628,-1.026 -9.405,-1.21c-0.306,-0.073 -0.545,-0.308 -0.624,-0.612c-0.079,-0.304 0.016,-0.627 0.249,-0.839c0.872,-0.797 8.671,-7.744 13.571,-6.318c1.601,0.467 2.689,1.724 3.232,3.738c0.487,1.803 -0.13,2.923 -0.733,3.545C453.557,108.318 451.115,108.727 448.516,108.727zM441.158,106.223c4.482,0.868 10.727,1.385 12.431,-0.372c0.28,-0.288 0.616,-0.801 0.314,-1.922c-0.384,-1.423 -1.061,-2.258 -2.07,-2.552C448.974,100.545 443.955,103.95 441.158,106.223z"
-        android:fillColor="#00C2AE"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M450.863,117.747c-4.597,0 -11.424,-8.268 -12.215,-9.244c-0.197,-0.244 -0.243,-0.578 -0.12,-0.866c0.123,-0.289 0.397,-0.485 0.709,-0.512c1.179,-0.096 11.597,-0.831 14.603,3.296c0.982,1.348 1.073,3.008 0.273,4.934c-0.716,1.724 -1.889,2.234 -2.747,2.357C451.202,117.736 451.034,117.747 450.863,117.747zM441.059,108.73c3.018,3.427 7.656,7.639 10.066,7.305c0.398,-0.057 0.978,-0.258 1.424,-1.331c0.566,-1.361 0.54,-2.436 -0.078,-3.284C450.716,109.009 444.655,108.638 441.059,108.73z"
-        android:fillColor="#00C2AE"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M440.736,121.651c0,0 -49.786,6.859 -100.408,-18.853c0,0 3.905,-15.867 9.47,-22.046c5.565,-6.179 64.031,-12.154 85.88,14.522c0.481,0.588 0.955,1.178 1.333,1.823C441.375,104.551 440.736,121.651 440.736,121.651"
-        android:fillColor="#46CDC0"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M422.382,98.694c-15.176,0 -44.2,-1.948 -69.604,-14.885c-0.602,-0.306 -0.84,-1.043 -0.534,-1.644c0.306,-0.602 1.043,-0.84 1.643,-0.535c35.54,18.099 78.34,14.307 78.768,14.268c0.678,-0.064 1.269,0.431 1.331,1.102c0.064,0.672 -0.43,1.268 -1.102,1.332C432.756,98.345 428.809,98.694 422.382,98.694z"
-        android:fillColor="#00C2AE"/>
+        android:fillColor="@color/colorGrPatientTop"/>
     <path
         android:pathData="M272.002,459.388c0,0 2.549,4.698 7.561,7.282c2.441,1.258 6.952,1.554 10.579,2.125c2.163,0.335 0.257,4.778 -3.008,5.414c-7.478,1.464 -22.449,1.697 -27.727,-1.085c-4.349,-2.418 -0.493,-12.197 -0.493,-12.197L272.002,459.388z"
         android:fillColor="@color/colorGrDoctorShoe"/>
