--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,16 +8,17 @@
     <color name="colorFieldBG">#F9F9F9</color>
 
 
-    <color name="colorGrBackground">#ff8000</color>
-    <color name="colorGrPatientSkin">#bfff00</color>
-    <color name="colorGrPatientHair">#0040ff</color>
-    <color name="colorGrPatientTop">#8000ff</color>
-    <color name="colorGrPatientBottom">#ff0000</color>
-    <color name="colorGrPatientShoe">#808080</color>
+    <color name="colorGrBackground">#CEEBE7</color>
+
+    <color name="colorGrPatientSkin">#FFC5A0</color>
+    <color name="colorGrPatientHair">#312A3C</color>
+    <color name="colorGrPatientTop">@color/colorPrimaryLight</color>
+    <color name="colorGrPatientBottom">#191717</color>
+    <color name="colorGrPatientShoe">#35302D</color>
 
     <color name="colorGrDoctorSkin">#FFD19F</color>
     <color name="colorGrDoctorHair">#2E3749</color>
-    <color name="colorGrDoctorTop">#7BBAB1</color>
+    <color name="colorGrDoctorTop">@color/colorPrimaryLight</color>
     <color name="colorGrDoctorApron">#F0FCFF</color>
     <color name="colorGrDoctorBottom">#002A32</color>
     <color name="colorGrDoctorShoe">#35302D</color>
