--- a/app/src/main/res/drawable/gr_emergency.xml
+++ b/app/src/main/res/drawable/gr_emergency.xml
@@ -25,7 +25,7 @@
         android:pathData="M389.202,132.005m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"
         android:strokeWidth="0.25"
         android:fillColor="#00000000"
-        android:strokeColor="#70927F"/>
+        android:strokeColor="@color/colorPrimaryLight"/>
     <group>
         <clip-path
             android:pathData="M397.164,129.653m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"/>
@@ -34,10 +34,10 @@
             android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M362.51,134.266l-16.942,58.423l5.821,5.777l-5.821,7.024l30.85,3.453z"
-            android:fillColor="#FFB84F"/>
+            android:fillColor="@color/colorGrPatientTop"/>
         <path
             android:pathData="M371.891,231.594l47.975,0l16.548,-104.461l-26.62,-1.671l-29.901,1.671l-17.383,7.133z"
-            android:fillColor="#FFB84F"/>
+            android:fillColor="@color/colorGrPatientTop"/>
         <path
             android:pathData="M387.998,142.703l21.796,-17.241l-7.978,-26.412l-23.155,3.036z"
             android:fillColor="@color/colorGrPatientSkin"/>
@@ -87,22 +87,22 @@
             android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M414.118,127.133l-5.543,-13.992l-30.933,7.202l8.733,26.347z"
-            android:fillColor="#FFB84F"/>
+            android:fillColor="@color/colorGrPatientTop"/>
         <path
             android:pathData="M378.661,123.415l17.324,-0.925l-16.092,4.643z"
-            android:fillColor="#FFD788"/>
+            android:fillColor="@color/colorGrPatientTop"/>
         <path
             android:pathData="M436.414,127.133l3.937,77.306l-24.34,12.765l-1.893,-90.071z"
-            android:fillColor="#FFB84F"/>
+            android:fillColor="@color/colorGrPatientTop"/>
         <path
             android:pathData="M405.804,114.45l-8.106,-2.527c-0.961,-0.3 -1.498,-1.322 -1.198,-2.284l6.462,-20.732c0.3,-0.961 1.322,-1.498 2.284,-1.198l8.106,2.527c0.961,0.3 1.498,1.322 1.198,2.284l-6.462,20.732C407.788,114.214 406.766,114.75 405.804,114.45z"
-            android:fillColor="#A5BBAA"/>
+            android:fillColor="@color/colorPrimaryLight"/>
         <path
             android:pathData="M408.012,115.139l-8.514,-2.654c-0.961,-0.3 -1.498,-1.322 -1.198,-2.284l6.462,-20.732c0.3,-0.961 1.322,-1.498 2.284,-1.198l8.514,2.654c0.961,0.3 1.498,1.322 1.198,2.284l-6.462,20.732C409.996,114.902 408.974,115.438 408.012,115.139z"
-            android:fillColor="#E8DFCF"/>
+            android:fillColor="@color/colorPrimary"/>
         <path
             android:pathData="M407.514,91.778m-1.283,0a1.283,1.283 0,1 1,2.566 0a1.283,1.283 0,1 1,-2.566 0"
-            android:fillColor="#A5BBAA"/>
+            android:fillColor="@color/colorPrimaryLight"/>
         <path
             android:pathData="M435.449,201.137l-23.406,-87.203l-3.554,1.613c0,0 -3.318,67.382 11.864,93.098L435.449,201.137z"
             android:fillColor="@color/colorGrPatientSkin"/>
@@ -120,7 +120,7 @@
             android:fillColor="@color/colorGrPatientSkin"/>
         <path
             android:pathData="M371.891,231.594l-9.381,-97.328l15.132,97.328z"
-            android:fillColor="#FFD788"/>
+            android:fillColor="@color/colorGrPatientTop"/>
     </group>
     <path
         android:pathData="M118.075,392.938h78.199v11.479h-78.199z"
@@ -197,7 +197,7 @@
         android:strokeWidth="1"
         android:pathData="M182.429,124.271c0,0 4.139,17.081 -22.675,22.774"
         android:fillColor="#00000000"
-        android:strokeColor="@color/colorGrPatientHair"/>
+        android:strokeColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M162.342,144.162c0,0 -4.129,13.06 2.088,25.467c0,0 -20.417,2.671 -33.878,-12.408c-0.331,-13.609 6.468,-26.814 15.015,-35.596c7.151,-7.347 27.465,-9.744 32.617,4.292C178.184,125.917 164.177,125.509 162.342,144.162z"
         android:fillColor="@color/colorGrDoctorHair"/>
@@ -205,21 +205,21 @@
         android:strokeWidth="1"
         android:pathData="M198.456,167.261c0,0 9.519,-26.653 -11.276,-44.518"
         android:fillColor="#00000000"
-        android:strokeColor="@color/colorGrPatientHair"/>
+        android:strokeColor="@color/colorGrDoctorHair"/>
     <path
         android:strokeWidth="1"
         android:pathData="M128.456,155.253c0,0 2.085,-41.251 37.489,-38.221"
         android:fillColor="#00000000"
-        android:strokeColor="@color/colorGrPatientHair"/>
+        android:strokeColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M187.592,157.222c0,0 -4.969,0.496 -12.347,0c0,0 3.752,4.608 9.312,4.14C185.837,161.255 187.592,157.222 187.592,157.222z"
         android:fillColor="#FFFFFF"/>
     <path
         android:pathData="M173.743,147.098a1.503,2.717 0,1 0,3.006 0a1.503,2.717 0,1 0,-3.006 0z"
-        android:fillColor="@color/colorGrPatientHair"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M187.179,145.421a1.503,2.717 0,1 0,3.006 0a1.503,2.717 0,1 0,-3.006 0z"
-        android:fillColor="@color/colorGrPatientHair"/>
+        android:fillColor="@color/colorGrDoctorHair"/>
     <path
         android:pathData="M183.931,147.098c0,0 1.146,4.551 6.505,4.205C190.436,151.303 183.654,159.987 183.931,147.098z"
         android:fillColor="@color/colorGrDoctorSkin"/>
@@ -282,13 +282,13 @@
         android:fillColor="@color/colorGrDoctorSkin"/>
     <path
         android:pathData="M307.445,240.2h-78.692c-4.927,0 -8.842,-4.141 -8.566,-9.06l3.074,-51.106c0.255,-4.545 4.015,-8.1 8.566,-8.1h78.692c4.927,0 8.842,4.141 8.566,9.06l-3.074,51.106C315.756,236.645 311.997,240.2 307.445,240.2z"
-        android:fillColor="#70927F"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M312.371,240.2h-78.692c-4.927,0 -8.842,-4.141 -8.566,-9.06l3.074,-51.106c0.255,-4.545 4.015,-8.1 8.566,-8.1h78.692c4.927,0 8.842,4.141 8.566,9.06l-3.074,51.106C320.682,236.645 316.923,240.2 312.371,240.2z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M285.052,220.881h-24.557l10.31,37.692c0.338,1.237 -0.593,2.458 -1.876,2.458h-23.961v4.305h27.636h16.397c4.11,0 7.096,-3.908 6.015,-7.873L285.052,220.881zM283.166,251.797c-3.067,0 -5.554,-2.486 -5.554,-5.554s2.486,-5.554 5.554,-5.554s5.554,2.486 5.554,5.554S286.233,251.797 283.166,251.797z"
-        android:fillColor="#70927F"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M280.629,206.096h-14.061c-3.354,0 -6.073,2.719 -6.073,6.073v8.712h26.207v-8.712C286.701,208.814 283.983,206.096 280.629,206.096z"
         android:fillColor="#70927F"/>
@@ -300,10 +300,10 @@
         android:fillColor="#E3E3E3"/>
     <path
         android:pathData="M284.665,206.096h-14.061c-3.354,0 -6.073,2.719 -6.073,6.073v8.712h26.207v-8.712C290.738,208.814 288.019,206.096 284.665,206.096z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M300.69,257.119l-9.871,-36.239h-26.287l1.478,5.427h-0.012l9.271,34.035c0.663,2.434 -1.08,4.81 -3.546,4.993h0.882h4.036h12.267h5.504C298.701,265.336 301.817,261.258 300.69,257.119zM285.184,251.797c-3.067,0 -5.554,-2.486 -5.554,-5.554s2.486,-5.554 5.554,-5.554s5.554,2.486 5.554,5.554S288.252,251.797 285.184,251.797z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:strokeWidth="1"
         android:pathData="M300.69,257.119l-9.871,-36.239l-0.08,0v-8.712c0,-3.354 -2.719,-6.073 -6.073,-6.073h-14.061"
@@ -383,22 +383,22 @@
         android:fillColor="@color/colorGrDoctorShoe"/>
     <path
         android:pathData="M112.688,460.766H76.934c-5.662,0 -10.252,-4.59 -10.252,-10.252V276.747h56.257v173.767C122.939,456.176 118.349,460.766 112.688,460.766z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M104.661,460.766H68.908c-5.662,0 -10.252,-4.59 -10.252,-10.252V276.747h56.257v173.767C114.913,456.176 110.323,460.766 104.661,460.766z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M330.611,460.766h-35.754c-5.662,0 -10.252,-4.59 -10.252,-10.252V276.747h56.257v173.767C340.862,456.176 336.272,460.766 330.611,460.766z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M322.584,460.766H286.83c-5.662,0 -10.252,-4.59 -10.252,-10.252V276.747h56.257v173.767C332.836,456.176 328.246,460.766 322.584,460.766z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M41.902,282.962h285.377c3.589,0 6.499,-2.91 6.499,-6.499v-4.719c0,-3.589 -2.91,-6.499 -6.499,-6.499H41.902c-3.589,0 -6.499,2.91 -6.499,6.499v4.719C35.403,280.052 38.313,282.962 41.902,282.962z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M171.164,282.962h199.133c3.589,0 6.499,-2.91 6.499,-6.499v-4.719c0,-3.589 -2.91,-6.499 -6.499,-6.499H171.164c-3.589,0 -6.499,2.91 -6.499,6.499v4.719C164.665,280.052 167.574,282.962 171.164,282.962z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M58.656,282.962h56.257v10.36h-56.257z"
         android:fillColor="#70927F"/>
@@ -447,16 +447,16 @@
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M436.806,78.777l0.369,-0.08c5.825,3.488 9.616,3.319 11.522,0.352l0.058,-0.09c1.617,-2.517 0.81,-5.512 -2.427,-7.591c-2.832,-1.819 -5.978,-2.062 -9.609,-1.155l-1.062,-5.762c4.513,-1.292 9.184,-1.149 14.039,1.969c6.294,4.043 8.312,10.293 4.703,15.912l-0.058,0.09c-3.638,5.664 -9.375,5.599 -14.914,3.248l-2.76,3.308l-3.641,-2.339L436.806,78.777zM429.298,89.576l6.024,3.869l-3.985,6.204l-6.024,-3.869L429.298,89.576z"
-        android:fillColor="#A5BBAA"/>
+        android:fillColor="@color/colorPrimaryLight"/>
     <path
         android:pathData="M48.738,333.408L48.738,333.408c-8.106,0 -14.678,6.571 -14.678,14.678v94.793c0,2.119 1.718,3.837 3.837,3.837h21.682c2.119,0 3.837,-1.718 3.837,-3.837v-94.793C63.416,339.98 56.844,333.408 48.738,333.408z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M61.725,391.431h-9.662c-3.995,0 -7.234,-3.239 -7.234,-7.234s3.239,-7.234 7.234,-7.234h9.662c5.377,0 9.752,-4.375 9.752,-9.752v-10.122c0,-3.995 3.239,-7.234 7.234,-7.234c3.995,0 7.234,3.239 7.234,7.234v10.122C85.944,380.566 75.079,391.431 61.725,391.431z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M46.395,410.491H36.272c-13.355,0 -24.22,-10.865 -24.22,-24.22v-9.662c0,-3.995 3.239,-7.234 7.234,-7.234s7.234,3.239 7.234,7.234v9.662c0,5.377 4.375,9.752 9.752,9.752h10.123c3.995,0 7.234,3.239 7.234,7.234C53.629,407.252 50.39,410.491 46.395,410.491z"
-        android:fillColor="#E8DFCF"/>
+        android:fillColor="@color/colorPrimary"/>
     <path
         android:pathData="M40.381,349.879h1.206v5.032h-1.206z"
         android:fillColor="@color/colorGrBackground"/>
